--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "env": { "browser": true, "es6": true, "node": true },
   "extends": ["airbnb", "react-app", "react-app/jest"],
   "rules": {
-    "no-console": "warn",
+    "no-console": "off",
     "quotes": ["error", "single"],
     "jsx-quotes": ["error", "prefer-double"],
     "indent": ["warn", 2],
