implement register and login with firebase

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 REACT_APP_API_KEY=fab30af0c86949df3573cee27a305bb0
+REACT_APP_FIREBASE_API_KEY=AIzaSyCzKiZYHTDA1jpE-2Hkvv6_wetwi1nuMs0
+REACT_APP_FIREBASE_AUTH_DOMAIN=movieproj-caaf0.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=movieproj-caaf0
+REACT_APP_FIREBASE_STORAGE_BUCKET=movieproj-caaf0.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=796601680664
+REACT_APP_FIREBASE_APP_ID=1:796601680664:web:45e554a84abe7e2d9b546d
