--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homapage": "https://github.com/KyryloRusakov/movie_app",
   "name": "moviepetproj",
   "version": "0.1.0",
   "private": true,
@@ -31,7 +32,9 @@
     "server": "json-server -w server/db.json -p 3001",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix --color",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -52,6 +55,7 @@
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.0.0",
+    "gh-pages": "^6.1.1",
     "husky": "^8.0.3",
     "json-server": "^0.17.3",
     "lint-staged": "^13.2.3",
