change homepage root

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homapage": "https://github.com/KyryloRusakov/movie_app",
+  "homapage": "https://KyryloRusakov.github.io/movie_app",
   "name": "moviepetproj",
   "version": "0.1.0",
   "private": true,
